opam-version: "1.2"
version: "dev"
maintainer: "palmskog@gmail.com"

homepage: "https://github.com/palmskog/fitch"
dev-repo: "https://github.com/palmskog/fitch.git"
bug-reports: "https://github.com/palmskog/fitch/issues"
license: "Proprietary"

build: [
  [ "./configure" ]
  [ make "checker" "-j%{jobs}%" ]
]
depends: [
  "coq" { ((>= "8.6.1" & < "8.7~") | (>= "8.7" & < "8.8~")) }
  "coq-mathcomp-ssreflect" {>= "1.6.1" & < "1.7~"}
  "coq-ott" {>= "0.27"}
  "ott" {build & >= "0.27"}
  "camlp4" {build}
  "ocamlbuild" {build}
  "ocamlfind" {build}
]
available: [ ocaml-version >= "4.02.3" ]

authors: [
  "Karl Palmskog <>"
]
