opam-version: "1.2"
version: "dev"
maintainer: "palmskog@gmail.com"

homepage: "https://github.com/palmskog/fitch"
dev-repo: "https://github.com/palmskog/fitch.git"
bug-reports: "https://github.com/palmskog/fitch/issues"
license: "MIT"

build: [
  [ "./configure" ]
  [ make "checker" "-j%{jobs}%" ]
]
depends: [
  "coq" {>= "8.9" & < "8.10~"}
  "coq-mathcomp-ssreflect" {>= "1.7" & < "1.8~"}
  "coq-ott" {>= "0.28"}
  "ott" {build & >= "0.28"}
  "camlp4" {build}
  "ocamlbuild" {build}
  "ocamlfind" {build}
]
available: [ ocaml-version >= "4.02.3" ]

authors: [
  "Karl Palmskog <palmskog@gmail.com>"
]
