opam-version: "2.0"
version: "dev"
maintainer: "palmskog@gmail.com"

homepage: "https://github.com/palmskog/fitch"
dev-repo: "git+https://github.com/palmskog/fitch.git"
bug-reports: "https://github.com/palmskog/fitch/issues"
license: "MIT"

synopsis: "Verified checker for Fitch-style propositional logic proofs"

build: [
  ["./configure"]
  [make "checker" "-j%{jobs}%"]
]
depends: [
  "ocaml" {>= "4.02.3"}
  "coq" {>= "8.9" & < "8.11~"}
  "coq-mathcomp-ssreflect" {>= "1.7" & < "1.10~"}
  "coq-ott" {>= "0.29"}
  "ott" {build & >= "0.29"}
  "camlp4" {build}
  "ocamlbuild" {build}
  "ocamlfind" {build}
]

authors: [	
  "Karl Palmskog"
]
