opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/palmskog/fitch"
dev-repo: "git+https://github.com/palmskog/fitch.git"
bug-reports: "https://github.com/palmskog/fitch/issues"
license: "MIT"

synopsis: "Verified checkers for Fitch-style propositional logic proofs"

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "4.05"}
  "dune" {>= "2.5"}
  "coq" {>= "8.16"}
  "coq-fitch" {= version}
  "menhir" {build & >= "20171013"}
]

authors: [
  "Karl Palmskog"
]
