opam-version: "2.0"
version: "dev"
maintainer: "palmskog@gmail.com"

homepage: "https://github.com/palmskog/fitch"
dev-repo: "git+https://github.com/palmskog/fitch.git"
bug-reports: "https://github.com/palmskog/fitch/issues"
license: "MIT"

synopsis: "Sound Fitch-style proof system in Coq for propositional logic"
description: """
A certified proof system and checker in Coq for Fitch-style propositional logic,
as defined in the book Logic for Computer Science by Huth and Ryan.
The checker is both executable inside Coq and after extraction to OCaml code.
"""

build: [
  ["./configure"]
  [make "-j%{jobs}%"]
]
install: [make "install"]
depends: [
  "coq" {>= "8.9" & < "8.11~"}
  "coq-mathcomp-ssreflect" {>= "1.7" & < "1.10~"}
  "coq-ott" {>= "0.29"}
  "ott" {build & >= "0.29"}
]

tags: [
  "category:Computer Science/Decision Procedures and Certified Algorithms/Decision procedures"
  "keyword:proof system"
  "keyword:propositional logic"
  "logpath:Fitch"
]

authors: [
  "Karl Palmskog"
]
