opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/palmskog/fitch"
dev-repo: "git+https://github.com/palmskog/fitch.git"
bug-reports: "https://github.com/palmskog/fitch/issues"
license: "MIT"

synopsis: "Verified checkers for Fitch-style propositional logic proofs"

build: [make "checker" "-j%{jobs}%"]
depends: [
  "dune" {>= "2.5"}
  "ocaml" {>= "4.05"}
  "coq" {>= "8.9" & < "8.12~"}
  "coq-ott" {>= "0.30"}
  "ott" {build & >= "0.30"}
  "menhir" {build & >= "20171013"}
]

authors: [
  "Karl Palmskog"
]
